店舗のアドレスをテーブルに追加

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -14,6 +14,7 @@
 <% @stores.each do |store| %>
   <div>
     <h3><%= store.name %></h3>
+    <h3><%= store.address %></h3>
     <div><%= store.description %></div>
   </div>
 <% end %>
