--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -14,7 +14,7 @@
 <% @stores.each do |store| %>
   <div>
     <h3><%= store.name %></h3>
-    <h3><%= store.address %></h3>
+    <p><%= store.address %></p>
     <div><%= store.description %></div>
   </div>
 <% end %>
