--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -3,7 +3,8 @@
 </h2>
 <div>
   <%= search_form_for(@search, url: root_path) do |f| %>
-    <%= f.search_field :description_cont %>
+    <%= f.search_field :description_cont, placeholder: "詳細" %>
+    <%= f.search_field :address_cont, placeholder: "住所" %>
     <%= f.submit '検索' %>
   <% end %>
   <%# form_with url: root_path, method: :get, local: true do |f| %>
