--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,12 @@
   </head>
 
   <body>
-    <%= yield %>
+    <header>
+      <h2 class="text-center my-5">府中産農産物直売所一覧</h2>
+    </header>
+    <hr>
+    <div class="container">
+      <%= yield %>
+    </div>
   </body>
 </html>
