--- a/app/views/home/_search.html.erb
+++ b/app/views/home/_search.html.erb
@@ -1,7 +1,8 @@
 <% stores.each do |store| %>
   <div class="mb-3">
     <h3><%= store.name %></h3>
-    <p><%= link_to store.address, "https://maps.google.co.jp/maps?q=東京都府中市#{store.address}" %></p>
+    <!--<p><%# link_to store.address, "https://maps.google.co.jp/maps?q=東京都府中市#{store.address}" %></p> -->
+    <p><%= link_to store.address, home_path(store) %></p>
     <div><%= highlight(store.description, @q, highlighter: '<strong class="kk">\1</strong>') %></div>
   </div>
   <%= link_to '編集', edit_home_path(store), class: 'btn btn-primary mb-3' %>
