--- a/app/views/home/show.html.erb
+++ b/app/views/home/show.html.erb
@@ -29,4 +29,4 @@ function initMap(){
   });
 }
 </script>
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDn2BOdGCJ8tK_Id9UMetmqepHFLXqrYl8&callback=initMap" async defer></script>
+<script src="https://maps.googleapis.com/maps/api/js?key=<%= ENV['MAP_API_KEY'] %>&callback=initMap" async defer></script>
